Amedn CATALINA_OPTS to java 11 supported options