@@ -1,4 +1,4 @@
-FROM tomcat:9.0.106-jdk11-temurin-jammy
+FROM tomcat:9.0-jdk11-openjdk
 
 ENV DB_HOST="172.22.5.164" \
     DB_PORT="1433" \
@@ -8,7 +8,7 @@ ENV DB_HOST="172.22.5.164" \
     ADMIN_USER=admin \
     ADMIN_PASS=admin
 
-ENV CATALINA_OPTS "-Xmx1024M -XX:+PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:/usr/local/tomcat/logs/gc.log -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=5 -XX:GCLogFileSize=10M"
+ENV CATALINA_OPTS="-Xmx1024M -Xlog:gc*:file=/usr/local/tomcat/logs/gc.log:time,uptime:filecount=5,filesize=10M"
 
 RUN mkdir -p /opt
 RUN rm -rf /usr/local/tomcat/webapps/ROOT && rm -rf /usr/local/tomcat/webapps/docs && rm -rf /usr/local/tomcat/webapps/examples
